fix image stretch

--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -38,6 +38,7 @@
 
     .challenge-image {
         grid-column: span 2;
+        width: 100%;
     }
 
     .challenge-image-icon {
